1.全部新增網頁頁籤icon 2.首頁修改scroll 3.文章首頁新增換頁頁籤 4.header樣式修改

--- a/html/articleAll.html
+++ b/html/articleAll.html
@@ -36,7 +36,7 @@
         </div>
         <section class="wrap flat">
             <!-- 最多68個字 -->
-            <a href="">
+            <a href="articlePage.html">
                 <div class="item">
                     <div class="pic">
                         <img src="assets/image/articleAll_articleContent_silk.png" alt="">
@@ -47,7 +47,7 @@
                     </div>
                 </div>
             </a>
-            <a href="">
+            <a href="articlePage.html">
                 <div class="item">
                     <div class="pic">
                         <img src="assets/image/articleAll_articleContent_hermesHelmetpng.jpg" alt="">
@@ -58,7 +58,7 @@
                     </div>
                 </div>
             </a>
-            <a href="">
+            <a href="articlePage.html">
                 <div class="item">
                     <div class="pic">
                         <img src="assets/image/articleAll_articleContent_30M.png" alt="">
@@ -71,7 +71,7 @@
                     </div>
                 </div>
             </a>
-            <a href="">
+            <a href="articlePage.html">
                 <div class="item">
                     <div class="pic">
                         <img src="assets/image/articleAll_articleContent_sotheby.png" alt="">
@@ -85,7 +85,7 @@
             </a>
         </section>
         <section class="wrap twoRows">
-            <a href="">
+            <a href="articlePage.html">
                 <div class="item">
                     <div class="pic">
                         <img src="assets/image/articleAll_articleContent_glass.png" alt="">
@@ -98,7 +98,7 @@
                     </div>
                 </div>
             </a>
-            <a href="">
+            <a href="articlePage.html">
                 <div class="item">
                     <div class="pic">
                         <img src="assets/image/articleAll_articleContent_hermesHelmetpng.jpg" alt="">
@@ -111,7 +111,7 @@
             </a>
         </section>
         <section class="wrap threeRows">
-            <a href="">
+            <a href="articlePage.html">
                 <div class="item">
                     <div class="pic">
                         <img src="assets/image/article_articleContent_beBear.png" alt="">
@@ -123,7 +123,7 @@
                     </div>
                 </div>
             </a>
-            <a href="">
+            <a href="articlePage.html">
                 <div class="item">
                     <div class="pic">
                         <img src="assets/image/articleAll_articleContent_30M.png" alt="">
@@ -134,7 +134,7 @@
                     </div>
                 </div>
             </a>
-            <a href="">
+            <a href="articlePage.html">
                 <div class="item">
                     <div class="pic">
                         <img src="assets/image/articleAll_articleContent_matthew.png" alt="">
@@ -148,7 +148,7 @@
         </section>
         <section class="wrap fourRows">
             <!-- 最多68個字 -->
-            <a href="">
+            <a href="articlePage.html">
                 <div class="item">
                     <div class="pic">
                         <img src="assets/image/articleAll_articleContent_silk.png" alt="">
@@ -159,7 +159,7 @@
                     </div>
                 </div>
             </a>
-            <a href="">
+            <a href="articlePage.html">
                 <div class="item">
                     <div class="pic">
                         <img src="assets/image/articleAll_articleContent_hermesHelmetpng.jpg" alt="">
@@ -170,7 +170,7 @@
                     </div>
                 </div>
             </a>
-            <a href="">
+            <a href="articlePage.html">
                 <div class="item">
                     <div class="pic">
                         <img src="assets/image/articleAll_articleContent_30M.png" alt="">
@@ -183,7 +183,7 @@
                     </div>
                 </div>
             </a>
-            <a href="">
+            <a href="articlePage.html">
                 <div class="item">
                     <div class="pic">
                         <img src="assets/image/articleAll_articleContent_sotheby.png" alt="">
@@ -196,6 +196,22 @@
                 </div>
             </a>
         </section>
+        <div class="articletPageChange">
+            <ul>
+                <li><a href="">&laquo;</a></li>
+                <li><a href="" class="small">1</a></li>
+                <li><a href="" class="small">2</a></li>
+                <li><a href="" class="small">3</a></li>
+                <li><a href="" class="small">4</a></li>
+                <li><a href="" class="small">5</a></li>
+                <li><a href="" class="small">6</a></li>
+                <li><a href="" class="small">7</a></li>
+                <li><a href="" class="small">8</a></li>
+                <li><a href="" class="small">9</a></li>
+                <li><a href="" class="small">10</a></li>
+                <li><a href="">&raquo;</a></li>
+            </ul>
+        </div>
         <!-- <input type="radio" name="whoPost" class="listchoose" id="officePost" checked>
         <input type="radio" name="whoPost" class="listchoose" id="memberPost">
         <section class="switchBar">
