--- a/html/articlePage.html
+++ b/html/articlePage.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Article Page</title>
+    <!-- 頁籤icon -->
+    <link rel="icon" href="assets/icon/a_icon.ico" type="art together icon">
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/articlePage.js"></script>
@@ -20,9 +22,9 @@
             <div class="pageContent">
                 <div class="breadcrumb">
                     <ul>
-                        <li><a href="" class="lightColor">首頁></a></li>
-                        <li ><a href="" class="lightColor">藝論></a></li>
-                        <li><a href="" class="epBColor">這篇文章</a></li>
+                        <li><a href="homePage.html" class="lightColor">首頁></a></li>
+                        <li ><a href="articleAll.html" class="lightColor">藝論></a></li>
+                        <li><a href="articlePage.html" class="epBColor">這篇文章</a></li>
                     </ul>
                 </div>
                 <div class="authorShortIntro">
