--- a/html/homePage.html
+++ b/html/homePage.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>首頁</title>
+    <!-- 頁籤icon -->
+    <link rel="icon" href="assets/icon/a_icon.ico" type="art together icon">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body> 
@@ -73,31 +75,36 @@
                 </div>
             </div>
         </section>
-        <section class="homeGallery">
+        <section class="scrollDown">
             <div class="scrollPic">
                 <img src="assets/image/home_homeCatalog_lavbag.png"  alt="">
             </div>
-            <div class="pic">
-                <img src="assets/image/home_homGallery_gallery.jpeg" alt="">
-            </div>
-            <div class="txt">
-                <h2 class="epBColor">藝起逛逛</h2>
-                <p class="deepColor">多樣化的展品，<br>豐富的展演方式。<br>在這裡，<br>美不只有一種形式。</p>
-                <button class="round">藝廊</button>
-            </div>
-        </section>
-        <section class="homeMember">
-            <div class="scrollPic">
-                <img src="assets/image/home_homeCatalog_lavbag.png"  alt="">
-            </div>
-            <div class="pic">
-                <img src="assets/image/home_homeMember_room.png" alt="">
-            </div>
-            <div class="txt">
-                <h2 class="epBColor">會員中心</h2>
-                <p class="deepColor">將美通通包含其中，將所有體驗美的過程記錄下來。</p>
-                <button class="round">會員中心</button>
-            </div>
+            <section class="homeGallery">
+                <!-- <div class="scrollPic">
+                    <img src="assets/image/home_homeCatalog_lavbag.png"  alt="">
+                </div> -->
+                <div class="pic">
+                    <img src="assets/image/home_homGallery_gallery.jpeg" alt="">
+                </div>
+                <div class="txt">
+                    <h2 class="epBColor">藝起逛逛</h2>
+                    <p class="deepColor">多樣化的展品，<br>豐富的展演方式。<br>在這裡，美不只有一種形式。</p>
+                    <button class="round">藝廊</button>
+                </div>
+            </section>
+            <section class="homeMember">
+                <!-- <div class="scrollPic">
+                    <img src="assets/image/home_homeCatalog_lavbag.png"  alt="">
+                </div> -->
+                <div class="pic">
+                    <img src="assets/image/home_homeMember_room.png" alt="">
+                </div>
+                <div class="txt">
+                    <h2 class="epBColor">會員中心</h2>
+                    <p class="deepColor">將美通通包含其中，<br>將所有體驗美的過程記錄下來。</p>
+                    <button class="round">會員中心</button>
+                </div>
+            </section>
         </section>
         <section class="homeNews">
             <div class="newsContain">
