--- a/html/prouductAll.html
+++ b/html/prouductAll.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>商品頁</title>
+    <!-- 頁籤icon -->
+    <link rel="icon" href="assets/icon/a_icon.ico" type="art together icon">
     <link rel="stylesheet" href="assets\css\style.css">
     <script src="js/vue/vue.js" defer></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js" defer></script>
@@ -246,14 +248,14 @@
     <div class="productPageChange">
         <div class="pageBox size marginAuto">
             <div class="itemBox">
-                <button><<</button>
+                <button>&laquo;</button>
                 <button>1</button>
                 <button>2</button>
                 <button>3</button>
                 <button>4</button>
                 <button>..</button>
                 <button>10</button>
-                <button>>></button>
+                <button>&raquo;</button>
             </div>
         </div>
     </div>
