--- a/html/3dSurroundView.html
+++ b/html/3dSurroundView.html
@@ -27,6 +27,8 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.js"></script>
 
     <title>會員中心</title>
+    <!-- 頁籤icon -->
+    <link rel="icon" href="assets/icon/a_icon.ico" type="art together icon">
 </head>
 
 <body>
