--- a/html/about.html
+++ b/html/about.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>about</title>
+    <!-- 頁籤icon -->
+    <link rel="icon" href="assets/icon/a_icon.ico" type="art together icon">
     <!-- OwlCarousel -->
     <link rel="stylesheet" href="assets/css/owl/owl.carousel.min.css">
     <link rel="stylesheet" href="assets/css/owl/owl.theme.default.min.css">
