關於我們修改

--- a/html/about.html
+++ b/html/about.html
@@ -21,48 +21,48 @@
     <!-- 伶_關於我們_main區域 -->
     <main class="aboutMain">
         <!-- 伶_關於我們_書架區_RWD -->
-        <section class="size introduceCardWrap">
+        <section class="size introduceCardWrap introduceCardWrapRWD">
             <div class="raw owl-carousel owl-theme">
                 <div class="introduceCard">
-                    <a href="#">
+                    <a href="" class="btn">
                         <h2>01</h2>
                         <h3>關於我們</h3>
-                        <p>read more</p>
+                        <p>more</p>
                     </a>
                 </div>
                 <div class="introduceCard">
-                    <a href="#">
+                    <a href="" class="btn">
                         <h2>02</h2>
-                        <h3>關於我們</h3>
-                        <p>read more</p>
+                        <h3>交易規範</h3>
+                        <p>more</p>
                     </a>
                 </div>
                 <div class="introduceCard">
-                    <a href="#">
+                    <a href="" class="btn">
                         <h2>03</h2>
-                        <h3>關於我們</h3>
-                        <p>read more</p>
+                        <h3>買家流程</h3>
+                        <p>more</p>
                     </a>
                 </div>
                 <div class="introduceCard">
-                    <a href="#">
+                    <a href="" class="btn">
                         <h2>04</h2>
-                        <h3>關於我們</h3>
-                        <p>read more</p>
+                        <h3>賣家流程</h3>
+                        <p>more</p>
                     </a>
                 </div>
                 <div class="introduceCard">
-                    <a href="#">
+                    <a href="" class="btn">
                         <h2>05</h2>
-                        <h3>關於我們</h3>
-                        <p>read more</p>
+                        <h3>聯絡我們</h3>
+                        <p>more</p>
                     </a>
                 </div>
                 <div class="introduceCard">
-                    <a href="#">
+                    <a href="" class="btn">
                         <h2>06</h2>
-                        <h3>關於我們</h3>
-                        <p>read more</p>
+                        <h3>合作品牌</h3>
+                        <p>more</p>
                     </a>
                 </div>
             </div>
@@ -73,24 +73,24 @@
         <section class="size introduceCardWrap introduceCardWrapPC">
             <div class="raw">
                 <div class="introduceCard">
-                    <a href="#">
-                        <h3>01</h3>
-                        <h2>關於我們</h2>
-                        <p>read more</p>
+                    <a href="" class="btn">
+                        <h2>01</h2>
+                        <h3>關於我們</h3>
+                        <p>more</p>
                     </a>
                 </div>
                 <div class="introduceCard">
-                    <a href="#">
-                        <h3>02</h3>
-                        <h2>交易規範</h2>
-                        <p>read more</p>
+                    <a href="" class="btn">
+                        <h2>02</h2>
+                        <h3>交易規範</h3>
+                        <p>more</p>
                     </a>
                 </div>
                 <div class="introduceCard">
-                    <a href="#">
-                        <h3>03</h3>
-                        <h2>買家流程</h2>
-                        <p>read more</p>
+                    <a href="" class="btn">
+                        <h2>03</h2>
+                        <h3>買家流程</h3>
+                        <p>more</p>
                     </a>
                 </div>
             </div>
@@ -100,29 +100,41 @@
         <section class="size introduceCardWrap introduceCardWrapPC">
             <div class="raw">
                 <div class="introduceCard">
-                    <a href="#">
-                        <h3>04</h3>
-                        <h2>賣家流程</h2>
-                        <p>read more</p>
+                    <a href="" class="btn">
+                        <h2>04</h2>
+                        <h3>賣家流程</h3>
+                        <p>more</p>
                     </a>
                 </div>
                 <div class="introduceCard">
-                    <a href="#">
-                        <h3>05</h3>
-                        <h2>拍賣守則</h2>
-                        <p>read more</p>
+                    <a href="" class="btn">
+                        <h2>05</h2>
+                        <h3>聯絡我們</h3>
+                        <p>more</p>
                     </a>
                 </div>
                 <div class="introduceCard">
-                    <a href="#">
-                        <h3>06</h3>
-                        <h2>合作品牌</h2>
-                        <p>read more</p>
+                    <a href="" class="btn">
+                        <h2>06</h2>
+                        <h3>合作品牌</h3>
+                        <p>more</p>
                     </a>
                 </div>
             </div>
             <div class="bookshelf"></div>
         </section>
+        <div class="a">
+            1
+        </div>
+        <div class="b">
+            2
+        </div>
+        <div class="c">
+            3
+        </div>
+        <div class="d">
+            4
+        </div>
     </main>
 
     <!-- 關於我們_頁尾區域 -->
