--- a/html/about.html
+++ b/html/about.html
@@ -42,14 +42,14 @@
                 <div class="introduceCard">
                     <a href="" class="btn">
                         <h2>03</h2>
-                        <h3>買家流程</h3>
+                        <h3>買家條款</h3>
                         <p>more</p>
                     </a>
                 </div>
                 <div class="introduceCard">
                     <a href="" class="btn">
                         <h2>04</h2>
-                        <h3>賣家流程</h3>
+                        <h3>賣家條款</h3>
                         <p>more</p>
                     </a>
                 </div>
@@ -91,7 +91,7 @@
                 <div class="introduceCard">
                     <a href="" class="btn">
                         <h2>03</h2>
-                        <h3>買家流程</h3>
+                        <h3>買家條款</h3>
                         <p>more</p>
                     </a>
                 </div>
@@ -104,7 +104,7 @@
                 <div class="introduceCard">
                     <a href="" class="btn">
                         <h2>04</h2>
-                        <h3>賣家流程</h3>
+                        <h3>賣家條款</h3>
                         <p>more</p>
                     </a>
                 </div>
@@ -125,22 +125,181 @@
             </div>
             <div class="bookshelf"></div>
         </section>
-        <div class="a">
-            1
-        </div>
-        <div class="b">
-            2
-        </div>
-        <div class="c">
-            3
-        </div>
-        <div class="d">
-            4
-        </div>
+        <!-- 伶_關於我們_報紙區_PC端 -->
+        <section class="size flipBookWrap aboutUsWrap">
+            <div class="pages" id="pages">
+                <div class="page pageCover"></div>
+                <div class="page">
+                    <div class="pageTitle">
+                        <hr>
+                            <h3>關於藝起</h3>
+                        <hr>
+                    </div>
+                    <div class="pageContent">
+                        <div class="pic">
+                            <img src="../assets/image/about_flipBook_about.jpg" alt="">
+                        </div>
+                        <div class="pageContentTxt">
+                            <p>藝起成立於2022年，為虛構網站。<br>本網站為緯育Tibame前端設計工程師班專題作業，本平台僅供學習、展示之用。<br><br>致力於提供各式創作藝術者一個展示作品的環境，建構享受潮流藝術的視覺饗宴，提倡藝術潮流的鑑賞；期待在藝術與收益之中取得平衡，媒合消費者與創作者，打造安全、安心、透明的交易平台，並持續推廣藝術創作。</p>
+                            <hr>
+                            <img src="../assets/image/all_logo.png" alt="logo" class="pageContentLogo">
+                        </div>
+                    </div>
+                </div>
+                <div class="page"></div>
+                <div class="page pageCover"></div>
+            </div>
+        </section>
+        <section class="size flipBookWrap aboutUsWrap">
+            <div class="pages" id="pages">
+                <div class="page pageCover"></div>
+                <div class="page">
+                    <div class="pageTitle">
+                        <hr>
+                            <h3>交易規範</h3>
+                        <hr>
+                    </div>
+                    <div class="pageContent">
+                        <div class="pageContentTxt">
+                            <p>為確保拍賣交易的安全規範與信譽，我們謹遵以下指導原則來營運業務：<br>
+                                <ul>
+                                    <br>
+                                    <li>1.嚴格的審查制度</li>
+                                    <li>2.賣家不得競投自己委託出售的拍賣品</li>
+                                    <li>3.最高應價者勝</li>
+                                    <li>4.公司雇員不得在拍賣會上委託售賣</li>
+                                    <li>5.賣家身份驗證程序</li>
+                                </ul>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="page">
+                    <div class="pageContent">
+                        <div class="pageContentTxt">
+                            <ul>
+                                <hr>
+                                <li>1.我們的拍賣會中的商品皆需經過審查與提供證書。</li>
+                                <hr>
+                                <li>2.賣家不得出價競投自己所委託出售的拍賣品。為此，我們的交易系統會確保在公開拍賣中，賣家無法出價競投自己委託進行拍賣的物品。</li>
+                                <hr>
+                                <li>3.對於所有拍賣而言，如有競價者於最後一分鐘出價，競投時限將會自動延長90秒，讓其他競價者有足夠時間還價，而您亦無需留待限時最後數秒才出價競投。在競投過程中，藝起會明確指出哪位競價者的出價為有效的最高應價。一旦拍賣結束，最高應價者將收到通知，確認拍賣成交。</li>
+                                <hr>
+                                <li>4.直接參與評估和策劃拍賣品的員工及其家庭成員，也不能在平台上出售。但根據上述規定，所有員工都可以出價，因此可以在平台上購買拍賣品。</li>
+                                <hr>
+                                <li>5.如果用戶希望在平台售賣物品，我們可能會要求他們提供有效的資料。</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="page pageCover"></div>
+            </div>
+        </section>
+        <section class="size flipBookWrap aboutUsWrap">
+            <div class="pages" id="pages">
+                <div class="page pageCover"></div>
+                <div class="page">
+                    <div class="pageTitle">
+                        <hr>
+                            <h3>買家條款</h3>
+                        <hr>
+                    </div>
+                    <div class="pageContent">
+                        <div class="pageContentTxt">
+                            <p>藝起提供一個網上市場，您可以在其中從全球賣家處購買獨特的物品。我們的網上市場對買賣雙方來說都是安全可靠的，這對我們很重要，這就是為什麼我們在藝起上推行了一些重要的競投和購買守則，也就是「買家條款」。<br><br>這些買家條款亦描述並規定了您與賣家直接簽訂的銷售合同下的某些權利和義務。當您同意這些買方條款，即表示您事先同意上述權利和義務是每份銷售合同的一部分，並且您將受這些條款對另一方簽訂合同者的約束。<br><br>因此，此類條款可以被引用，或由您引用來作為銷售合同的一部分。這些條款將取代銷售合同中不兼容的任何條款。此外，賣家可能已上傳銷售合同的更多條款或條件，它們該在我們的網上市場中細列出來給您。在我們的賣家條款，您可以找到賣家根據銷售合同下的某些權利及義務。<br><br><br>本文件中使用了但未定義的大寫術語，在我們的使用條款中已作定義。</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="page">
+                    <div class="pageContent">
+                        <div class="pageContentTxt">
+                            <hr>條款1：購買拍賣品-視同您與賣家簽訂銷售合同，對於您使用我們的服務，我們將收取不可退還的費用，買家必須支付運費或運輸費用，並在適用的情況下支付任何額外的進口費用，需要時請協助採取進一步身份識別或其他合規措施。<br><br>條款2：支付拍賣品-在勝出拍賣後，您需要在三天內付款並保證您的購買是合法沒有違反法律的。<br><br>條款3：未能履行義務-您未能遵守我們的使用條款的後果:暫時或永久限制您訪問我們的網上市場或您競投拍賣品和/或出售拍賣品的授權；暫時或永久撤銷與您的帳戶相關的任何特殊狀態；暫時或永久限制您訪問您的帳戶。
+                        </div>
+                    </div>
+                </div>
+                <div class="page pageCover"></div>
+            </div>
+        </section>
+        <section class="size flipBookWrap aboutUsWrap">
+            <div class="pages" id="pages">
+                <div class="page pageCover"></div>
+                <div class="page">
+                    <div class="pageTitle">
+                        <hr>
+                            <h3>賣家條款</h3>
+                        <hr>
+                    </div>
+                    <div class="pageContent">
+                        <div class="pageContentTxt">
+                            <p>藝起提供了一個網上市場，您可以在其中向全球買家出售您的獨特物品。我們的網上市場對買賣雙方來說都是安全可靠的，這對我們很重要，這就是為什麼我們在藝起上推行了一些重要的銷售守則「賣家條款」。<br><br>這些賣家條款還描述並規定了您與拍賣品買家直接簽訂的 銷售合同下的某些權利和義務。當您同意這些賣家條款，即表示您事先同意上述權利和義務是每份銷售合同的一部分，並且您將受另一方簽訂合同者以這些條款對您的約束。<br>因此，此類條款可以作為銷售合同的一部分來對您作出引用和/或由您引用。這些條款將取代銷售合同中不兼容的任何條款。在我們的買家條款，您可以找到買家根據銷售合用下的某些權利及義務。<br><br>本文件中使用了但未定義的大寫術語，在我們的使用條款中已作定義。</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="page">
+                    <div class="pageContent">
+                        <div class="pageContentTxt">
+                            <hr>條款1：註冊為賣家-您需要創建一個賣家帳戶，會要求您進一步驗證你的身份，我們會就您使用我們的服務收取費用，賣家須對他們出售的拍賣品負全部的責任。<br><br>條款2：提供拍賣品至拍賣-們將確定您的拍賣品是否合適，我們需要您的拍賣品一個正確、清晰和全面的描述，您有責任確保拍賣品與其描述相符。<br><br>條款3：未能履行您對買家的義務-您未能遵守我們的使用條款的後果:暫時或永久限制您訪問我們的網上市場或您的銷售和/或競投拍賣品授權；暫時或永久撤銷與您的賬戶相關的任何特殊狀態和/或立即終止與您簽訂的任何商業合同；暫時或永久限制您訪問您的帳戶；
+                        </div>
+                    </div>
+                </div>
+                <div class="page pageCover"></div>
+            </div>
+        </section>
+        <section class="size flipBookWrap aboutUsWrap">
+            <div class="pages" id="pages">
+                <div class="page pageCover"></div>
+                <div class="page">
+                    <div class="pageTitle">
+                        <hr>
+                            <h3>聯絡我們</h3>
+                        <hr>
+                    </div>
+                    <div class="pageContent">
+                        <div class="pageContentTxt">
+                            <p>本網站為緯育TibaMe_前端設計工程師班第104期學員專題成果作品，本平台僅供學習、展示之用。若有侵權疑慮，您可以私訊 緯育TibaMe，後續會由專人協助處理。</p><br>
+                            <p>地址：320桃園市中壢區復興路46號9樓</p>
+                            <p>電話： 03-425-1108</p>
+                            <p>網站： <a href="https://www.tibame.com/">https://www.tibame.com/</a></p>
+                            <p>信箱： sarah_jh_shen@wiedu.com</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="page">
+                    <div class="pageContent">
+                        <div class="pageContentTxt"></div>
+                    </div>
+                </div>
+                <div class="page pageCover"></div>
+            </div>
+        </section>
+        <section class="size flipBookWrap aboutUsWrap">
+            <div class="pages" id="pages">
+                <div class="page pageCover"></div>
+                <div class="page">
+                    <div class="pageTitle">
+                        <hr>
+                            <h3>合作品牌</h3>
+                        <hr>
+                    </div>
+                    <div class="pageContent">
+                        <div class="pageContentTxt">
+                            <p>本網站為緯育TibaMe_前端設計工程師班第104期學員專題成果作品，本平台僅供學習、展示之用。若有侵權疑慮，您可以私訊 緯育TibaMe，後續會由專人協助處理。</p><br>
+                            
+                        </div>
+                    </div>
+                </div>
+                <div class="page">
+                    <div class="pageContent">
+                        <div class="pageContentTxt"></div>
+                    </div>
+                </div>
+                <div class="page pageCover"></div>
+            </div>
+        </section>
     </main>
 
     <!-- 關於我們_頁尾區域 -->
-    <!-- @@include('layout/footer.html') -->
+    @@include('layout/footer.html')
 
     <!-- Jquery.js -->
     <script src="js/jquery/jquery.js"></script>
