--- a/html/articleAll.html
+++ b/html/articleAll.html
@@ -32,7 +32,7 @@
             <h2 class="deepColor">
                 WEDNESDAY, 2ND MARCH 2022
             </h2>
-            <a href="" class="square">刊登</a>
+            <a href="articlePost.html" class="square">刊登</a>
         </div>
         <section class="wrap flat">
             <!-- 最多68個字 -->
