不小心直接改了dev 改頁面的header

--- a/html/articleAll.html
+++ b/html/articleAll.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
     <!-- @@include('layout/header.html') -->
-    @@include('layout/header.html',{"headerClass":""})
+    @@include('layout/headerNormal.html',{"headerClass":""})
     <section class="articleContent">
         <div class="mainTitle">
             <h1 class="deepColor">
