--- a/html/articlePage.html
+++ b/html/articlePage.html
@@ -16,7 +16,7 @@
     副標22px letter-spacing:normal line-height:28px
     內文20px letter-spacing:-0.06px line-height:32px -->
     <!-- @@include('layout/header.html') -->
-    @@include('layout/header.html',{"headerClass":""})
+    @@include('layout/headerNormal.html',{"headerClass":""})
     <section class="articlePageContent">
         <section class="articlePageWrap">
             <div class="pageContent">
