--- a/articlePage.html
+++ b/articlePage.html
@@ -18,19 +18,19 @@
     
         <script src="https://kit.fontawesome.com/1a00250e22.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="js/header.js"></script>
-    <header class="">
-        <section class="headerContain">
-            <div class="logoContain">
+    <script src="js/header.js"></script>
+    <header>
+        <section class="headerNormalContain">
+            <section class="logoContain">
                 <div class="logo">
-                    <a href="homePage.html">
-                        <img src="assets/image/all_logo.png">
-                    </a>
+                        <a href="homePage.html">
+                            <img src="assets/image/all_logo.png">
+                        </a>
                 </div>
-            </div>
+            </section>
             <div class="hamburger"></div>
             <nav class="mainMenu fullscreen">
-                <ul>
+                <ul>    
                     <li style="--animation-order: 1;">
                         <input id="navMenu" type="checkbox">
                         <label for="navMenu" class="deepColor">
@@ -39,7 +39,7 @@
                             </a>
                             <b>
                                 ▼
-                            </b>
+                            </b>   
                         </label>
                         <ul>
                             <li><a href="" class="lightColor">展示區</a></li>
@@ -62,18 +62,18 @@
                         <a href="3dSurroundView.html" class="deepColor">會員中心</a>
                     </li>
                     <!-- <li style="--animation-order: 6;">
-                        <div class="memberList">
+                        <section class="memberList">
                             <div class="icon">
-                                <a href="">
-                                    <img src="assets/image/home_header_iconBell.png">
-                                </a>
+                                    <a href="">
+                                        <img src="assets/image/home_header_iconBell.png">
+                                    </a>
                             </div>
                             <div class="icon">
-                                <a href="">
-                                    <img src="assets/image/home_header_iconMember.png">
-                                </a>
+                                    <a href="3dSurroundView.html">
+                                        <img src="assets/image/home_header_iconMember.png">
+                                    </a>
                             </div>
-                        </div>
+                        </section>
                     </li> -->
                     <li style="--animation-order: 6;">
                         <div class="login">
