--- a/html/about.html
+++ b/html/about.html
@@ -18,7 +18,7 @@
 <body>
     <!-- 關於我們_頁首區域 -->
     <!-- @@include('layout/header.html') -->
-    @@include('layout/header.html',{"headerClass":""})
+    @@include('layout/headerNormal.html',{"headerClass":""})
 
     <!-- 伶_關於我們_main區域 -->
     <main class="aboutMain">
