--- a/about.html
+++ b/about.html
@@ -14,6 +14,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
     <!-- css -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <style>
+        .aa{
+            background-color: antiquewhite;
+            width: 400px;
+            height: 400px;
+        }
+    </style>
 </head>
 <body>
     <!-- 關於我們_頁首區域 -->
@@ -105,14 +112,14 @@
         <section class="size introduceCardWrap introduceCardWrapRWD">
             <div class="raw owl-carousel owl-theme">
                 <div class="introduceCard">
-                    <a href="" class="btn">
+                    <a href="#" class="btn" id="aboutMe">
                         <h2>01</h2>
                         <h3>關於我們</h3>
                         <p>more</p>
                     </a>
                 </div>
                 <div class="introduceCard">
-                    <a href="" class="btn">
+                    <a href="" class="btn" id="rule">
                         <h2>02</h2>
                         <h3>交易規範</h3>
                         <p>more</p>
@@ -204,8 +211,8 @@
             </div>
             <div class="bookshelf"></div>
         </section>
-        <div class="a">
-            1
+        <div class="aa displayNone" id="aboutMeCard">
+            1111111
         </div>
         <div class="b">
             2
